@@ -3,6 +3,7 @@
 - Feature: [#13057] Make GameAction flags accessible by plugins.
 - Feature: [#13376] Open custom window at specified tab.
 - Feature: [#13398] Add pause button to the Track Designer.
+- Feature: [#13495] [Plugin] Add properties for park value, guests and company value.
 - Change: [#13346] Change FootpathScenery to FootpathAddition in all occurrences.
 - Fix: [#12895] Mechanics are called to repair rides that have already been fixed.
 - Fix: [#13257] Rides that are exactly the minimum objective length are not counted.
